<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user"
            android:enabled="true"
            android:icon="@drawable/ic_user"
            android:title="@string/Profile" />
        <item
            android:id="@+id/nav_timings"
            android:icon="@drawable/ic_time"
            android:title="@string/Work_Timings" />
        <item
            android:id="@+id/nav_pdf_report"
            android:icon="@drawable/report"
            android:title="@string/pdf_report" />
        <item
            android:id="@+id/nav_holidays"
            android:icon="@drawable/ic_calendar"
            android:title="@string/Holidays" />
        <item
            android:id="@+id/nav_currency"
            android:icon="@drawable/ic_money"
            android:title="@string/Currency"
            android:visible="false"/>


    </group>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_maintenance"
            android:title="@string/Setting" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/Share" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/Logout" />


    </group>
</menu>
