<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".salary_calculate">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical">



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:id="@+id/backarrow"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salary"
            android:textSize="18sp"
            android:textColor="#FFF"
            android:layout_gravity="center_horizontal|center_vertical"/>

    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/gray_400"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:gravity="center"
                android:textColor="#000000"
                android:text="@string/Month" >
            </TextView>
             <Spinner
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/spinner_month"
                 android:gravity="center"
                 android:layout_weight="1">
             </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#969696">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:gravity="center"
                android:text="@string/Last"
                android:textColor="#000000"

                >
            </TextView>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/skyblue"
        android:layout_marginStart="10dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="12dp"
                android:text="@string/Date" >
            </TextView>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ffffff">
            </TextView>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
            android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="12dp"
            android:textColor="#ffffff"
            android:text="@string/Punch_In" >
        </TextView>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ffffff">
            </TextView>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
                android:textSize="12dp"
            android:layout_weight="1"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/Punch_Out" >
        </TextView>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ffffff">
            </TextView>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
                android:textSize="12dp"
            android:layout_weight="1"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/Total_Time" >
        </TextView>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ffffff">
            </TextView>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
                android:textSize="12dp"
            android:layout_weight="1"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/Earning" >
        </TextView>
        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="10dp">
        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:smoothScrollbar="true"
            >

        </ListView>
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/adds_key"/>
        <Button
            android:id="@+id/generate_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttondesign"
            android:textColor="#ffffff"
            android:text="@string/Generate_Report">

        </Button>

    </LinearLayout>


</LinearLayout>


</RelativeLayout>