<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="15dp">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/skyblue">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Office_location"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="17dp"
            android:textColor="#000000"
            android:text="@string/Name"


            />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/inputdesign"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:padding="9dp"
            android:textColorHint="@color/gray_hint" />


    </LinearLayout>











    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cancel"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:padding="10dp"
            android:id="@+id/cancel"
            android:background="@drawable/buttondesign"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Add_Location"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:padding="10dp"
            android:id="@+id/submit"
            android:background="@drawable/buttondesign"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="10dp" />

    </LinearLayout>

</LinearLayout>